Fix spacing on couple name

--- a/src/components/Invitation/Invitation.module.css
+++ b/src/components/Invitation/Invitation.module.css
@@ -28,8 +28,8 @@
 }
 
 .couple-name {
-    margin-top: 2rem;
-    margin-bottom: 3.5rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
 
 .dengan-pasangannya{
